--- a/semana 10/index.html
+++ b/semana 10/index.html
@@ -6,7 +6,16 @@
     <link href="style.css" rel="stylesheet">
   </head>
   <body>
-    <img src="img/1.jpg" alt="image"/>
+  
+    <center>
+      <div class= "margen" ></div>
+
+  <img src="img/logo.png" width="533" height="207" class="img-responsive" >
+  </div>
+
+ </center>
+<html>
+
     <div class="container">
       <form>
       <div class="form-group">
@@ -21,7 +30,6 @@
       <ul class="posts">
       </ul>
     </div>
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="app.js"></script>
     
